// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET /v2/swaps/:id retrieves a swap from a native swap id 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap from a vault origin 1`] = `
{
  "deposit": {
    "amount": "4999949999999650000",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
    "witnessedAt": 552000,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap from a vault origin in COMPLETED 1`] = `
{
  "deposit": {
    "amount": "4999949999999650000",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
    "witnessedAt": 552000,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in COMPLETED status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENDING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENT status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENT",
  "swap": {
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "0xdeadbeef",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status 2`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "inputAmount": "4999949999999650000",
      "intermediateAmount": "4506169140",
      "outputAmount": "4192904666034",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "0",
    "swappedInputAmount": "4999949999999650000",
    "swappedIntermediateAmount": "4506169140",
    "swappedOutputAmount": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status with a tx ref 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "txRef": "0xa2d5df86c6ec123283eb052c598a0f4b650367a81ad141b9ff3adb0286a86c17",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SWAPPING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with FillOrKillParams in COMPLETED 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refundEgress": {
    "amount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
    "txRef": "0xd2398250c9fa869f0eb7659015549ed46178c95cedd444c3539f655068f6a7d9",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "COMPLETED",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "105000000490000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
  "swapId": "368",
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with a refund in SENDING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refundEgress": {
    "amount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "SENDING",
  "swap": {
    "fees": [
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "105000000490000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "4999949999999650000",
    "regular": {
      "inputAmount": "4999949999999650000",
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
    },
    "remainingInputAmount": "4999949999999650000",
    "swappedInputAmount": "0",
    "swappedIntermediateAmount": "0",
    "swappedOutputAmount": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves mulitple DCA swaps in FAILED status if refund egress fails but swap completes 1`] = `
{
  "deposit": {
    "amount": "10000000000000000000",
    "witnessedAt": 552000,
    "witnessedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "id": "86-Ethereum-85",
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refundEgress": {
    "amount": "999844999999160000",
    "failedAt": 624000,
    "failedBlockIndex": "104-1",
    "failure": {
      "failedAt": 624000,
      "failedBlockIndex": "104-1",
      "mode": "REFUND_OUTPUT_TOO_SMALL",
      "reason": {
        "message": "The amount is below the minimum egress amount.",
        "name": "ethereumIngressEgress.BelowEgressDustLimit",
      },
    },
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swap": {
    "dca": {
      "currentChunk": null,
      "executedChunks": 2,
      "lastExecutedChunk": {
        "executedAt": 564000,
        "executedBlockIndex": "94-594",
        "inputAmount": "4999949999999650000",
        "intermediateAmount": "4506169140",
        "outputAmount": "4192904666034",
        "retryCount": 0,
        "scheduledAt": 552000,
        "scheduledBlockIndex": "92-399",
      },
      "remainingChunks": 8,
    },
    "fees": [
      {
        "amount": "9112484",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "9999899999999300",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "9012338",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "91033720",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
      {
        "amount": "105000000490000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "EGRESS",
      },
      {
        "amount": "197450000",
        "asset": "DOT",
        "chain": "Polkadot",
        "type": "EGRESS",
      },
    ],
    "originalInputAmount": "9999899999999300000",
    "remainingInputAmount": "0",
    "swappedInputAmount": "9999899999999300000",
    "swappedIntermediateAmount": "9012338280",
    "swappedOutputAmount": "8385809332068",
  },
  "swapEgress": {
    "amount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "txRef": "104-2",
    "witnessedAt": 624000,
    "witnessedBlockIndex": "104-7",
  },
}
`;
